# modor

./: .gitignore  .lints  CHANGELOG.md  Cargo.toml  PUBLISHED-CRATES  README.md  clippy.toml  deny.toml  rustfmt.toml
crates/modor/: Cargo.toml
crates/modor/benches/: entity_creation.rs  multiple_systems_fragmented_iteration.rs  one_system_fragmented_iteration.rs  parallel_system_iteration.rs  simple_system_iteration.rs
crates/modor/src/: actions.rs  app.rs  context.rs  dyn_key.rs  entities.rs  entity_filters.rs  from_app.rs  globals.rs  id.rs  lib.rs  logging.rs  macro_utils.rs  node.rs  object.rs  objects.rs  ranges.rs  reference.rs  result.rs  role.rs  singleton.rs  state.rs  system_checks.rs  system_runner.rs  systems.rs  testing.rs  update.rs  updater.rs  utils.rs
crates/modor/tests/: action_static_check.rs  actions.rs  app.rs  entity_static_check.rs  hierarchy.rs  inheritance.rs  queries.rs  singletons.rs  system_static_check.rs  world.rs
crates/modor_derive/: Cargo.toml  README.md
crates/modor_derive/src/: actions.rs  attributes.rs  builder.rs  common.rs  components.rs  crate_name.rs  from_app.rs  functions.rs  global.rs  idents.rs  impl_block.rs  lib.rs  main_endpoint.rs  node.rs  object.rs  root_node.rs  singleton.rs  state.rs  system_impl.rs  system_param.rs  system_params.rs  systems.rs  temporary_components.rs  tests.rs  updater.rs  utils.rs  visit.rs
crates/modor_graphics/: Cargo.toml  README.md
crates/modor_graphics/res/: circle.wgsl  default.wgsl  ellipse.wgsl  empty.wgsl  rectangle.wgsl
crates/modor_graphics/src/: animation.rs  anti_aliasing.rs  appearance.rs  background.rs  buffer.rs  camera.rs  capture.rs  color.rs  cursor.rs  data.rs  errors.rs  frame_rate.rs  gpu.rs  instance_groups.rs  lib.rs  mappings.rs  material.rs  mesh.rs  model.rs  module.rs  resources.rs  runner.rs  size.rs  sprite.rs  surface.rs  target.rs  testing.rs  texture.rs  utils.rs  validation.rs  window.rs
crates/modor_graphics/tests/: background.rs  capture.rs  hierarchy.rs  shapes.rs  testing.rs  transparency.rs
crates/modor_graphics_new2/: Cargo.toml  README.md
crates/modor_graphics_new2/examples/: demo.rs  new_rendering_2d.rs  pong.rs  test.rs  text.rs  texture_target.rs
crates/modor_graphics_new2/res/: default.wgsl  ellipse.wgsl  rectangle.wgsl
crates/modor_graphics_new2/src/: builders.rs  entities.rs  input.rs  lib.rs  module.rs  resource.rs  runner.rs  testing.rs
crates/modor_input/: Cargo.toml  README.md
crates/modor_input/src/: data.rs  fingers.rs  gamepads.rs  inputs.rs  keyboard.rs  lib.rs  mouse.rs  normalization.rs  utils.rs
crates/modor_internal/: Cargo.toml  README.md
crates/modor_internal/src/: coverage.rs  dyn_key.rs  dyn_traits.rs  dyn_types.rs  index.rs  lib.rs  testing.rs  ti_vec.rs
crates/modor_jobs/: Cargo.toml  README.md
crates/modor_jobs/src/: asset_loading.rs  asset_loading_job.rs  job.rs  lib.rs  traits.rs
crates/modor_math/: Cargo.toml  README.md
crates/modor_math/src/: lib.rs  matrices_4d.rs  matrix.rs  matrix_4d.rs  points.rs  points_2d.rs  points_3d.rs  quaternion.rs  size_2d.rs  size_3d.rs  vectors.rs  vectors_2d.rs  vectors_3d.rs
crates/modor_physics/: Cargo.toml  README.md
crates/modor_physics/src/: body.rs  body_register.rs  collision_group.rs  collisions.rs  data.rs  delta.rs  lib.rs  module.rs  physics_hooks.rs  pipeline.rs  user_data.rs  utils.rs
crates/modor_picking/: Cargo.toml  README.md
crates/modor_picking/res/: default.wgsl  ellipse.wgsl
crates/modor_picking/src/: data.rs  lib.rs
crates/modor_resources/: Cargo.toml  README.md
crates/modor_resources/src/: lib.rs  resource.rs  testing.rs
crates/modor_text/: Cargo.toml  README.md
crates/modor_text/res/: text.wgsl
crates/modor_text/src/: font.rs  lib.rs  material.rs  resources.rs  text.rs
crates/modor_ui/: Cargo.toml  README.md
crates/modor_ui/src/: data.rs  lib.rs
examples/: Cargo.toml  ecs.rs  features.rs  multiple_groups.rs  parallel.rs  velocity.rs
examples-old/collisions_2d/: Cargo.toml
examples-old/input/: Cargo.toml
examples-old/input/examples/: input.rs
examples/android_example/: Cargo.toml
examples/android_example/src/: lib.rs  main.rs
examples/assets/: blur.wgsl
examples/collisions/: Cargo.toml
examples/collisions/examples/: collisions.rs
examples/collisions_2d/: Cargo.toml
examples/collisions_2d/examples/: collisions_2d.rs
examples/collisions_2d/src/: lib.rs
examples/examples/: android_multi_window.rs  android_rendering_2d_new.rs  android_text.rs  android_window_dyn.rs  animation_2d.rs  anti_aliasing.rs  collisions_2d.rs  game_of_life.rs  gamepad.rs  graphics.rs  keyboard.rs  mouse.rs  multi_window.rs  nodes.rs  objects.rs  ordering.rs  physics.rs  physics_2d.rs  picking.rs  platformer.rs  pong.rs  rendering_2d.rs  rendering_2d_new.rs  rotation_2d.rs  test_macros.rs  text.rs  text_2d.rs  texture_2d.rs  touch.rs  ui.rs  window_dyn.rs
examples/examples/android/: animation_2d.rs  anti_aliasing.rs  collisions_2d.rs  custom_shader.rs  game_of_life.rs  gamepad.rs  keyboard.rs  mouse.rs  physics_2d.rs  platformer.rs  pong.rs  rendering_2d.rs  text_2d.rs  texture_2d.rs  texture_animation.rs  texture_target.rs  touch.rs
examples/examples/pong/: ball.rs  events.rs  field.rs  main.rs  paddles.rs  scores.rs
examples/game_of_life/: Cargo.toml
examples/game_of_life/examples/: game_of_life.rs
examples/game_of_life/resources/: save
examples/input/: Cargo.toml
examples/modor_examples/: Cargo.toml
examples/rendering_2d/: Cargo.toml
examples/res/: game-of-life-grid
examples/rotation_2d/: Cargo.toml
examples/src/: animation_2d.rs  anti_aliasing.rs  collisions_2d.rs  custom_shader.rs  game_of_life.rs  gamepad.rs  keyboard.rs  lib.rs  mouse.rs  multi_window.rs  new2.rs  new2_rendering_2d.rs  new2_ui.rs  new_rendering_2d.rs  new_terraria.rs  new_ui.rs  physics_2d.rs  platformer.rs  rendering_2d.rs  rendering_2d_new.rs  text.rs  text_2d.rs  texture_2d.rs  texture_animation.rs  texture_target.rs  touch.rs  ui.rs  window_dyn.rs
examples/textures/: Cargo.toml
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
(+885 files in other folders)
