[package]
name = "modor_examples"
version = "0.1.0"
description = "Examples of the Modor game engine"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
getrandom.workspace = true
instant.workspace = true
log.workspace = true
rand.workspace = true
modor.workspace = true
modor_math.workspace = true
modor_graphics.workspace = true
modor_input.workspace = true
modor_physics.workspace = true
modor_resources.workspace = true
modor_text.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue.workspace = true

[package.metadata.android]
build_targets = ["armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.sdk]
target_sdk_version = 31

[[example]]
name = "animation_2d_android"
path = "examples/animation_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "animation_2d"
path = "examples/animation_2d.rs"
crate-type = ["bin"]

[[example]]
name = "anti_aliasing_android"
path = "examples/anti_aliasing.rs"
crate-type = ["cdylib"]

[[example]]
name = "anti_aliasing"
path = "examples/anti_aliasing.rs"
crate-type = ["bin"]

[[example]]
name = "rendering_2d_android"
path = "examples/rendering_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "rendering_2d"
path = "examples/rendering_2d.rs"
crate-type = ["bin"]

[[example]]
name = "rotation_2d_android"
path = "examples/rotation_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "rotation_2d"
path = "examples/rotation_2d.rs"
crate-type = ["bin"]

[[example]]
name = "text_2d_android"
path = "examples/text_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "text_2d"
path = "examples/text_2d.rs"
crate-type = ["bin"]

[[example]]
name = "texture_2d_android"
path = "examples/texture_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "texture_2d"
path = "examples/texture_2d.rs"
crate-type = ["bin"]

[[example]]
name = "keyboard_android"
path = "examples/keyboard.rs"
crate-type = ["cdylib"]

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"
crate-type = ["bin"]

[[example]]
name = "mouse_android"
path = "examples/mouse.rs"
crate-type = ["cdylib"]

[[example]]
name = "mouse"
path = "examples/mouse.rs"
crate-type = ["bin"]

[[example]]
name = "touch_android"
path = "examples/touch.rs"
crate-type = ["cdylib"]

[[example]]
name = "touch"
path = "examples/touch.rs"
crate-type = ["bin"]

[[example]]
name = "gamepad_android"
path = "examples/gamepad.rs"
crate-type = ["cdylib"]

[[example]]
name = "gamepad"
path = "examples/gamepad.rs"
crate-type = ["bin"]

[[example]]
name = "game_of_life_android"
path = "examples/game_of_life.rs"
crate-type = ["cdylib"]

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"
crate-type = ["bin"]

[[example]]
name = "pong_android"
path = "examples/pong/main.rs"
crate-type = ["cdylib"]

[[example]]
name = "pong"
path = "examples/pong/main.rs"
crate-type = ["bin"]
