[package]
name = "modor_examples"
version = "0.1.0"
description = "Examples of the Modor game engine"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true
getrandom.workspace = true
instant.workspace = true
log.workspace = true
rand.workspace = true
modor.workspace = true
modor_math.workspace = true
modor_graphics.workspace = true
modor_input.workspace = true
modor_physics.workspace = true
modor_resources.workspace = true
modor_text.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { workspace = true, features = ["wasm-bindgen"] }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.sdk]
target_sdk_version = 31

[[example]]
name = "animation_2d_android"
path = "examples/android/animation_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "anti_aliasing_android"
path = "examples/android/anti_aliasing.rs"
crate-type = ["cdylib"]

[[example]]
name = "collisions_2d_android"
path = "examples/android/collisions_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "game_of_life_android"
path = "examples/android/game_of_life.rs"
crate-type = ["cdylib"]

[[example]]
name = "gamepad_android"
path = "examples/android/gamepad.rs"
crate-type = ["cdylib"]

[[example]]
name = "keyboard_android"
path = "examples/android/keyboard.rs"
crate-type = ["cdylib"]

[[example]]
name = "mouse_android"
path = "examples/android/mouse.rs"
crate-type = ["cdylib"]

[[example]]
name = "physics_2d_android"
path = "examples/android/physics_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "platformer_android"
path = "examples/android/platformer.rs"
crate-type = ["cdylib"]

[[example]]
name = "pong_android"
path = "examples/android/pong.rs"
crate-type = ["cdylib"]

[[example]]
name = "rendering_2d_android"
path = "examples/android/rendering_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "text_2d_android"
path = "examples/android/text_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "texture_2d_android"
path = "examples/android/texture_2d.rs"
crate-type = ["cdylib"]

[[example]]
name = "touch_android"
path = "examples/android/touch.rs"
crate-type = ["cdylib"]
