[package]
name = "modor_examples"
version = "0.1.0"
description = "Examples of the Modor game engine"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
modor.workspace = true
modor_physics.workspace = true
modor_graphics.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { workspace = true, features = ["wasm-bindgen"] }

[lints]
workspace = true

[package.metadata.android]
build_targets = ["armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.sdk]
target_sdk_version = 31
