[package]
name = "run-wasm"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cargo-run-wasm = { workspace = true }
fs_extra = { workspace = true }
pico-args = { workspace = true }
