[package]
name = "modor"
description = "Core library of Modor game engine"
readme = "../../README.md"
keywords = ["game", "engine", "modular", "object", "framework"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true

[dependencies]
fxhash.workspace = true
log.workspace = true
scoped_threadpool.workspace = true
typed-index-collections.workspace = true
modor_derive.workspace = true
modor_internal.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true

[dev-dependencies]
doc-comment.workspace = true
instant.workspace = true
spin_sleep.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
compiletest_rs.workspace = true
criterion = { workspace = true, features = ["rayon"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion.workspace = true
wasm-bindgen-test.workspace = true

[[bench]]
name = "entity_creation"
harness = false

[[bench]]
name = "simple_system_iteration"
harness = false

[[bench]]
name = "one_system_fragmented_iteration"
harness = false

[[bench]]
name = "multiple_systems_fragmented_iteration"
harness = false

[[bench]]
name = "parallel_system_iteration"
harness = false
