[package]
name = "modor"
description = "Core library of Modor game engine"
readme = "../../README.md"
keywords = ["game", "engine", "modular", "framework", "object"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derivative.workspace = true
fxhash.workspace = true
log.workspace = true
modor_derive.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen-test.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true

[lints]
workspace = true
