[package]
name = "modor_derive"
version = "0.1.0"
authors = ["Nicolas Ferré <nicolas.ferre.public@gmail.com>"]
edition = "2021"
description = "Procedural macros of Modor game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
readme = "../../README.md"
keywords = ["modor", "game", "engine", "proc", "macro"]
categories = ["game-engines"]
exclude = [".github", "README.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
modor = { version = "0.1.0", path = "../modor" } # TODO: remove
