[package]
name = "modor_graphics_new2"
description = "Graphics module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "graphics", "display", "rendering", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph.workspace = true
bytemuck.workspace = true
fxhash.workspace = true
futures.workspace = true
gilrs.workspace = true
image.workspace = true
instant.workspace = true
log.workspace = true
spin_sleep.workspace = true
typed-index-collections.workspace = true
winit.workspace = true
modor.workspace = true
modor_input.workspace = true
modor_internal.workspace = true
modor_jobs.workspace = true
modor_math.workspace = true
modor_physics.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wgpu = { workspace = true, features = ["webgl"] }

[dev-dependencies]
approx.workspace = true
rand.workspace = true # TODO: remove


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
