[package]
name = "modor_internal"
description = "Internal module of Modor game engine for common utils"
readme = "./README.md"
keywords = ["modor", "internal"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.license = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
typed-index-collections.workspace = true

[dev_dependencies]
static_assertions.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
