[package]
name = "modor_internal"
description = "Internal module of Modor game engine for common utils"
readme = "./README.md"
keywords = ["modor", "internal"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
