[package]
name = "modor_internal"
description = "Internal utilities for Modor game engine"
readme = "./README.md"
keywords = ["modor", "internal"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true

[lints]
workspace = true
