[package]
name = "modor_jobs"
version = "0.1.0"
authors = ["Nicolas Ferré <nicolas.ferre.public@gmail.com>"]
edition = "2021"
description = "Jobs module of Modor game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
readme = "./README.md"
keywords = ["modor", "job", "task", "async", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]

[dependencies]
modor = { version = "0.1.0", path = "../modor" }
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.12", features = ["tokio1"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Location"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[dev-dependencies]
modor_internal = { version = "0.1.0", path = "../modor_internal" }
