[package]
name = "modor_jobs"
description = "Jobs module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "job", "task", "async", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true

[dependencies]
futures.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue.workspace = true

[dev-dependencies]
modor.workspace = true
modor_internal.workspace = true
