[package]
name = "modor_jobs"
description = "Jobs module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "job", "task", "async", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures.workspace = true
log.workspace = true
modor.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
relative-path.workspace = true

[lints]
workspace = true
