[package]
name = "modor_math"
description = "Math module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "math", "vector"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true

[dependencies]
approx = { workspace = true }

[dev-dependencies]
modor_internal = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
