[package]
name = "modor_math"
description = "Math module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "math", "vector"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.license = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true

[dev-dependencies]
modor_internal.workspace = true
modor.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
