[package]
name = "modor_math"
description = "Math module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "math", "vector"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true

[dev-dependencies]
modor_internal.workspace = true
modor.workspace = true

[lints]
workspace = true
