[package]
name = "modor_physics"
description = "Physics module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "physics", "collision", "game", "engine"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true

[dependencies]
rapier2d = { workspace = true }
modor = { workspace = true }
modor_math = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
modor_internal = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
