[package]
name = "modor_physics"
description = "Physics module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "physics", "collision", "game", "engine"]
categories = ["game-engines"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true
fxhash.workspace = true
log.workspace = true
rapier2d.workspace = true
modor.workspace = true
modor_math.workspace = true
modor_resources.workspace = true

[dev-dependencies]
modor_internal.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
