[package]
name = "modor_resources"
description = "Resources module of Modor game engine"
readme = "./README.md"
keywords = ["modor", "resource", "load", "async", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/modor-engine/modor"
rust-version.workspace = true

[dependencies]
fxhash.workspace = true
log.workspace = true
modor.workspace = true
modor_jobs.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
