[package]
name = "modor_text"
description = "Text crate of Modor game engine"
readme = "./README.md"
keywords = ["modor", "graphics", "font", "text", "game"]
categories = ["game-engines"]
exclude = [".github", "README.md", "assets"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ab_glyph.workspace = true
bytemuck.workspace = true
modor.workspace = true
modor_graphics.workspace = true

[lints]
workspace = true
